# music-player

./: Cargo.toml  README.md  justfile
i18n/en/: music_player.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs
src/app/pages/: library.rs  mod.rs  now_playing.rs
src/audio/: backend.rs  metadata.rs  mod.rs  mpris.rs  queue.rs
