[package]
name = "music-player"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "An music player for the COSMIC™ desktop"
repository = "https://github.com/bloomdevelop/music-player"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
anyhow = "1.0.99"
crossbeam-channel = "0.5.15"
tokio = "1.47.1"
futures-util = "0.3.31"
i18n-embed-fl = "0.10.0"
open = "5.3.0"
rust-embed = "8.5.0"
mpris-server = "0.9.0"
gstreamer = "0.24.1"

[dependencies.i18n-embed]
version = "0.16.0"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
branch = "master"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
    # Enables XDG portal dialog integrations.
    "xdg-portal"
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
